objects/Services_Offered_Vertical__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Services Offered Verticals</relationshipLabel>
        <relationshipName>Services_Offered_Verticals_CaseId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Offered__c</fullName>
        <description>Service Offered by Client</description>
        <label>Service Offered</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>Vertical associated to the Service Offered</description>
        <label>Vertical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Organic Case website content setup Services Offered to Verticals related list - LS ATV</description>
    <label>Services Offered Vertical</label>
    <nameField>
        <displayFormat>SOV-{0000000000}</displayFormat>
        <label>Services Offered Vertical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Offered Verticals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Services_Vertical_Master</fullName>
        <active>true</active>
        <description>Default Record Type for Services Offered Vertical related list to Organic Setup Cases</description>
        <label>Services Vertical Master</label>
    </recordTypes>
</CustomObject>